<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
				  android:layout_height="0dp"
				  android:layout_weight="1"
			android:orientation="horizontal">
		<LinearLayout
				android:layout_width="0dp"
				android:layout_weight="1"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="center">

    	<ImageButton
    	    android:id="@+id/button1"
    	    android:layout_width="158dp"
    	    android:layout_height="80dp"
    	    android:layout_gravity="center"
			android:background="#00000000"
    	    android:src="@drawable/everyday" />
    	
    	<TextView  android:text="@string/everyday" 
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_gravity="center">


			<ImageButton
					android:id="@+id/button2"
					android:layout_width="158dp"
					android:layout_height="80dp"
					android:layout_gravity="center"
					android:background="#00000000"
					android:src="@drawable/translate" />
    	
				<TextView  android:text="@string/translate"
				android:layout_width="200dp"
				android:layout_height="80dp"
				android:gravity="center_horizontal"
				android:textSize="20dp"
						   android:textColor="@color/white"
				android:layout_gravity="center"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="0dp"
				  android:layout_weight="1"
				  android:orientation="horizontal">
		<LinearLayout
				android:layout_width="0dp"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_weight="1">

    	<ImageButton
    	    android:id="@+id/button3"
    	    android:layout_width="144dp"
    	    android:layout_height="80dp"
    	    android:layout_gravity="center"
			android:background="#00000000"
    	    android:src="@drawable/classname" />
    	
    	<TextView  android:text="@string/className" 
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:textSize="20dp"
				   android:textColor="@color/white"
        android:layout_gravity="center"/>
    	
    	</LinearLayout>
    	
    	<LinearLayout android:layout_width="0dp"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_weight="1">

    	<ImageButton
    	    android:id="@+id/button4"
    	    android:layout_width="162dp"
    	    android:layout_height="80dp"
    	    android:layout_gravity="center"
			android:background="#00000000"
    	    android:src="@drawable/notebook" />
    	
    	<TextView  android:text="@string/notebook"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:textSize="20dp"
				   android:textColor="@color/white"
        android:layout_gravity="center"/>
		</LinearLayout>
</LinearLayout>
</LinearLayout>
