<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="160dp" >

        <LinearLayout
            android:id="@+id/mStudy_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bar_bg"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/activity_main_img_bottom"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/icon1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/study"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mExam_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bar_bg"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/activity_main_img_bottom"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/icon2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exam_library"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="160dp" >

        <LinearLayout
            android:id="@+id/mFavour_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/bar_bg"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/activity_main_img_bottom"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/icon3" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/favourite"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mError_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/bar_bg"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/activity_main_img_bottom"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/icon4" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exam_error"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
                android:id="@+id/mLogin_layout"
                android:layout_width="fill_parent"
                android:layout_height="160dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:background="@drawable/bar_bg"
                android:orientation="vertical" >

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/activity_main_img_bottom"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/icon3" />

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="用户登录"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
        </LinearLayout>
    <LinearLayout
            android:id="@+id/mLogout_layout"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:background="@drawable/bar_bg"
            android:orientation="vertical" >

        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_main_img_bottom"

                android:layout_marginTop="20dp"
                android:background="@drawable/icon3" />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="用户注销"
                android:textColor="@color/white"
                android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>